<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gate Checking Point</string>
    <string name="app_name_title">Gate Checking Point</string>
    <string name="action_settings">Settings</string>
    <string name="action_get_loc">Location</string>
    <string name="about_version">About</string>
    <string name="desc_image">Image</string>

    <string name="text_vin_number">VIN Number</string>
    <string name="text_date">11 Oktober 2013</string>
    <string name="text_park_here">Park Here</string>
    <string name="text_scan_qr">Scan QR Code</string>
    <string name="text_latitude">LATITUDE</string>
    <string name="text_longitude">LONGITUDE</string>
    
    <string name="error_invalid_id">This ID is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_longer_characters">This note is too long</string>
    
    <string-array name="list">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>
     <string-array name = "main_gate">
        <item>Masuk</item>
        <item>Keluar</item>
        
    </string-array>
    <string-array name = "setting_map">
        <item>Standar</item>
        <item>Satelite</item>
     
    </string-array>
        <string name="settingGate">Setting Gate Type</string>
        <string name="spinner_prompt">Spinner Data</string>
          <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
</resources>
